--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
@@ -19,8 +20,6 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "pestphp/pest": "*",
-        "pestphp/pest-plugin-laravel": "*",
         "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
