--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
-        "primeicons": "^7.0.0"
+        "primeicons": "^7.0.0",
+        "ziggy": "^2.4.0",
+        "ziggy-js": "^2.3.0"
     }
 }
