--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.6.3",
         "vite": "^5.0",
-        "vue": "^3.4.0"
+        "vue": "^3.5.12"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
